fix: overflow-x: hidden

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif+Display:wght@300&family=Rubik:wght@400;500;700&display=swap");
 
-
+html {
+ overflow-x: hidden;
+}
 
 *,
 ::before,
